# middlewaresw

./: .gitignore  BuildAndUt.groovy  BuildAndUtFailAnalysis.groovy  CMakeLists.txt  README.md  build.sh  engine_data.proto  engine_data_pb2.py  feature_requirements.md  feature_requirements.txt  run_app.sh  run_coverage.sh  run_tests.sh  test_client.py  test_test_client.py
coverage/: CMakeLists.txt
include/: Engine.h  Receiver.h  Server.hpp  engine_data.pb.cc  engine_data.pb.h
src/: Engine.cpp  Receiver.cpp  Server.cpp  main.cpp
tests/: CMakeLists.txt  test_engine.cpp  test_receiver.cpp  test_server.cpp
